[package]
name = "cydeep"
version = "0.1.0"
edition = "2021"
authors = ["Cybrium AI <hello@cybrium.ai>"]
description = "PLC/field asset deep inspection — Purdue Level 0 visibility"
license = "MIT"
repository = "https://github.com/cybrium-ai/cydeep"
[[bin]]
name = "cydeep"
path = "src/main.rs"
[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
[profile.release]
opt-level = 3
lto = true
strip = true
